# bitchat

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  build.sh  chat_server.cpp  format.sh
Client/: CMakeLists.txt  chat_client.cpp  client.cpp
Client/Common/: CMakeLists.txt
Client/Common/include/Client/Common/: Types.hpp
Client/Common/include/Client/Common/Attribute/: RAIISubscription.hpp  TAttribute.hpp
Client/Controller/: CMakeLists.txt
Client/Controller/include/: ControllerFactory.hpp  IController.hpp
Client/Controller/include/Controller/: ControllerFactory.hpp  IController.hpp
Client/Controller/src/: CController.cpp  CController.hpp  CMakeLists.txt  ControllerFactory.cpp
Client/Interface/: CMakeLists.txt
Client/Interface/include/Interface/: IInterface.hpp  InterfaceFactory.hpp
Client/Interface/src/: CInterface.cpp  CInterface.hpp  CMakeLists.txt  InterfaceFactory.cpp
Client/KeyCatchingRoutine/: CMakeLists.txt
Client/KeyCatchingRoutine/include/KeyCatchingRoutine/: IKeyCatchingRoutine.hpp  KeyCatchingRoutineFactory.hpp
Client/KeyCatchingRoutine/src/: CKeyCatchingRoutine.cpp  CKeyCatchingRoutine.hpp  CMakeLists.txt  KeyCatchingRoutineFactory.cpp
Client/ServerProxy/: CMakeLists.txt
Client/ServerProxy/include/ServerProxy/: IServerProxy.hpp  ServerProxyFactory.hpp
Client/ServerProxy/src/: CMakeLists.txt  CServerProxy.cpp  CServerProxy.hpp  ServerProxyFactory.cpp
Client/SettingsManager/: CMakeLists.txt
Client/SettingsManager/include/SettingsManager/: ISettingsManager.hpp  SettingsManagerFactory.hpp
Client/SettingsManager/src/: CMakeLists.txt  CSettingsManager.cpp  CSettingsManager.hpp  SettingsManagerFactory.cpp
Client/Window/: CMakeLists.txt
Client/Window/include/Window/: IWindow.hpp  WindowFactory.hpp
Common/: CMakeLists.txt
Common/include/Common/: action.hpp  helper_functions.hpp  message.hpp  terminal_functions.hpp
Server/: CMakeLists.txt  chat_server.cpp  server.cpp
Server/ClientProxy/: CMakeLists.txt
Server/ClientProxy/include/ClientProxy/: ClientProxyFactory.hpp  IClientProxy.hpp
Server/ClientProxy/src/: CClientProxy.cpp  CMakeLists.txt  CServerProxy.hpp  ServerProxyFactory.cpp
Server/ClientsAcceptor/: CMakeLists.txt
Server/ClientsAcceptor/include/ClientsAcceptor/: ClientsAcceptorFactory.hpp  IClientsAcceptor.hpp
Server/ClientsAcceptor/src/: CClientsAcceptor.cpp  CClientsAcceptor.hpp  CMakeLists.txt  ClientsAcceptorFactory.cpp
